fix overflow

--- a/src/sass/components/MODAL/_modal.scss
+++ b/src/sass/components/MODAL/_modal.scss
@@ -28,6 +28,10 @@ img {
 }
 
 /* Modal */
+.modal-on {
+  overflow: hidden;
+}
+
   .backdrop{
 
     position: fixed;
